crates/reinhardt-query/tests/compile_fail/zadd_gt_lt_conflict.rs
fn main() {
    use reinhardt_query::nosql::redis::zset::ZSetCommand;
    let _ = ZSetCommand::zadd("z").only_if_greater().only_if_less();
}
